new bug docs for netty and hib-reactive